infra/k8s/posts.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: posts
  labels:
    app: posts
spec:
  containers:
    - name: posts
      image: pawan-bisht/post-now:0.0.1
      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "250m"
